[project]
name = "pytorch-cyclegan-and-pix2pix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-image>=0.25.2",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "dominate>=2.8.0",
    "Pillow>=10.0.0",
    "wandb>=0.16.0",
    "visdom>=0.2.4",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "platform_system != 'Darwin'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu121"
explicit = true

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.uv]
cache-dir = "./.uv_cache"
